--- a/git-test/index.html
+++ b/git-test/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>Git test lesson</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, asperiores quaerat animi dolorem in alias, dolorum, unde ipsam sint molestias consequuntur eveniet numquam sequi nisi. Ex consectetur voluptates quae reiciendis.</p>
     <script src="js/app.js"></script>
 </body>
 </html>
